--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -1,42 +1,95 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.content {
+  display: flex;
+  justify-content: center;
+  background-color: #c4f4cc;
+  width: 100vw;
+  height: 100vh;
+}
+
+.base-content {
+  display: flex;
+  justify-content: center;
+  margin-top: 10%;
+  position: absolute;
+}
+
+.bnt-content {
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  margin-top: 28%;
+  
+
+}
+
+.emergencia {
+  background-color: red;
+
+}
+
+.prioritario {
+  background-color: rgb(0, 255, 0);
+
+}
+
+.normal {
+  background-color: rgb(161, 161, 161);
+
   text-align: center;
+  margin-left: 10px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.normal,
+.prioritario,
+.emergencia {
+  margin-left: 20px;
+  border-radius: 10px;
+  padding: 20px 20px 20px 20px;
+  height: 10vh;
+  width: 10vw;
+  font-size: larger;
+  font-weight: bold;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.ficha {
+  display: flex;
+  justify-content: space-around;
 }
 
-.card {
-  padding: 2em;
+ul {
+  margin-bottom: 0;
+  width: auto auto auto;
+  height: auto auto auto;
+  background-color: #ffff;
+  position: absolute;
+  margin-top: 70%;
+  border-radius: 20px;
 }
 
-.read-the-docs {
-  color: #888;
+ul span {
+  padding-right: 200px;
+  margin-bottom: 0;
+  text-align: center;
+  width: 200px;
+  font-size: large;
+
+  
+}
+
+.text-senha {
+  padding-right: 50px;
+}
+
+.text-tipo {
+  padding-left: 50px;
+}
+
+.text-horario {
+  padding-left: 80px;
+}
+
+.text-content {
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
 }
